                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 19-01-2005 updated: Finnish language file (Thnx to jutski)
  - 18-01-2005 updated: Catalan language file (Thnx to buc)
  - 18-01-2005 updated: German language file
  - 18-01-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 18-01-2005 updated: Norwegian language file (Thnx to vnmartinsen)
  - 17-01-2005 added: some more startuplogging
  - 17-01-2005 fixed: Minor blackscreen issues when starting videos in some view modes (NB: Zoom is still not functioning in the overlay modes).
  - 17-01-2005 added: Combination Overlays/Pixel shader method (faster than just overlays, with the same (or better?) quality)
  - 17-01-2005 changed: Minor tweaks to the pixel shader YV12->RGB coefficients.
  - 17-01-2005 removed: Slow overlays method as it gave no improvement in quality
  - 16-01-2005 changed: mplayer command for postprocessing, no quality changes
  - 16-01-2005 added: Option to add Film Grain on video
  - 16-01-2005 updated: Korean language file (Thnx to akoakoako)
  - 16-01-2005 updated: Polish language file (Thnx to napek)
  - 16-01-2005 fixed: CDDA playback broken
  - 15-01-2005 added: [ 1097508 ] Fix for FTP logging, new GetTime/DateFormat functions (Thanks to jarkkom)
                      Logging is disabled by default, xbfilezilla will write a daily logfile to /xbmc/Logs/
                      To enable logging set "Enable logging" in "FileZilla Server.xml" to 1 
  - 14-01-2005 changed: extended asx parsing to support entryref tags and different tag-casing
  - 14-01-2005 added: [ 1097753 ] Updated XBMC masterlock/share lock code (Thanks to slacker)